it was z-index issue

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -54,7 +54,6 @@ p img{
 .banner { }
 
 .top-bar-section li:not(.has-form) a:not(.button) {
-  padding: auto 10px;
   font-size: 12px;
   font-weight: bold;
   line-height: 45px;
@@ -64,7 +63,6 @@ p img{
   }
 }
 .top-bar-section li.active:not(.has-form) a:not(.button) {
-  padding: auto 8px;
   color: rgb(153, 153, 153) !important;
 }
 .top-bar-section .has-dropdown>a {
@@ -98,9 +96,10 @@ p img{
 }
 .accordion {
   position: absolute;
-  z-index: 1000;
+  z-index: 1;
   width: 100%;
 }
+
 .accordion dd>.main-menu-stack {
   margin-right: 10px;
   padding: 5px 15px;
@@ -203,7 +202,6 @@ p img{
 
 .list-link-title {
   padding-bottom: 3px;
-  /* border-bottom: 1px solid #fff; */
   margin-bottom: 5px;
   a{
     font-size: 20px;
